Added Calculator to the Qt folder

--- a/C++/Qt/RackProject/systemrack.ui
+++ b/C++/Qt/RackProject/systemrack.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RackSystem</class>
- <widget class="QMainWindow" name="RackSystem">
+ <class>SystemRack</class>
+ <widget class="QMainWindow" name="SystemRack">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,12 +11,9 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>RackSystem</string>
+   <string>SystemRack</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <property name="styleSheet">
-    <string notr="true">margin: 0px;</string>
-   </property>
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
@@ -37,9 +34,6 @@
        <width>398</width>
        <height>498</height>
       </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">margin: 0px;</string>
      </property>
     </widget>
    </widget>
