--- a/C++/Qt/NewRackProject/racksystem.ui
+++ b/C++/Qt/NewRackProject/racksystem.ui
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="styleSheet">
-    <string notr="true">margin: 0px;</string>
+    <string notr="true"/>
    </property>
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
@@ -39,7 +39,7 @@
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">margin: 0px;</string>
+      <string notr="true"/>
      </property>
     </widget>
    </widget>
