--- a/C++/Qt/Demo/vm.ui
+++ b/C++/Qt/Demo/vm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>82</width>
-    <height>39</height>
+    <width>124</width>
+    <height>25</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,12 +15,34 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background: #63823C;
-border-radius: 8px;
-padding: 2px;</string>
+border-radius: 3px;
+padding: 0px;
+margin-left: 5px;</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <item>
     <widget class="QLabel" name="label">
+     <property name="maximumSize">
+      <size>
+       <width>124</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <property name="text">
       <string>SomethinToo too</string>
      </property>
